# ux3270

./: .gitignore  MIGRATION.md  PROJECT_SUMMARY.md  README.md  SECURITY_SUMMARY.md  USAGE.md  VISUAL_SHOWCASE.md  demo_screenshot.py  latest  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: docs.yml  release.yml
0.1.0-test3/: 404.html  index.html  sitemap.xml
0.1.0-test3/api/dialog/: index.html
0.1.0-test3/api/panel/: index.html
0.1.0-test3/components/form/: index.html
0.1.0-test3/components/menu/: index.html
0.1.0-test3/components/message/: index.html
0.1.0-test3/components/selection-list/: index.html
0.1.0-test3/components/table/: index.html
0.1.0-test3/components/tabular-entry/: index.html
0.1.0-test3/components/work-with-list/: index.html
0.1.0-test3/getting-started/: index.html
0.1.0-test3/keyboard/: index.html
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/api/dialog/: index.html
1.0.0/api/panel/: index.html
1.0.0/components/form/: index.html
1.0.0/components/menu/: index.html
1.0.0/components/message/: index.html
1.0.0/components/selection-list/: index.html
1.0.0/components/table/: index.html
1.0.0/components/tabular-entry/: index.html
1.0.0/components/work-with-list/: index.html
1.0.0/getting-started/: index.html
1.0.0/keyboard/: index.html
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/api/dialog/: index.html
1.0.1/api/panel/: index.html
1.0.1/components/form/: index.html
1.0.1/components/menu/: index.html
1.0.1/components/message/: index.html
1.0.1/components/selection-list/: index.html
1.0.1/getting-started/: index.html
1.0.1/keyboard/: index.html
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/getting-started/: index.html
1.1.0/keyboard/: index.html
1.1.0/search/: search_index.json
examples/: demo.py
examples/inventory_app/: database.py  main.py
inventory_app/: database.py  main.py
screenshots/: form.tape  generate.sh  menu.tape  message.tape  selection.tape  table.tape  tabular.tape  worklist.tape
src/ux3270_ui/: __init__.py  table.py
tests/: test_form_layout.py  test_ux3270.py
ux3270/: __init__.py  field.py  screen.py
ux3270_ui/: form.py  menu.py  table.py
(+23 files in other folders)
