[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ux3270"
version = "0.1.0"
description = "IBM 3270-like terminal application library for Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "ux3270 contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/ljosa/ux3270"
Repository = "https://github.com/ljosa/ux3270"

[project.scripts]
inventory-app = "inventory_app.main:main"

[tool.setuptools.packages.find]
include = ["ux3270*", "inventory_app*"]
