[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ux3270"
version = "0.1.0"
description = "IBM 3270-like terminal UI library for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "ux3270 contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/ljosa/ux3270"
Repository = "https://github.com/ljosa/ux3270"

[project.scripts]
inventory-app = "inventory_app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ux3270", "src/ux3270_ui", "examples/inventory_app"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"examples" = ""
